--- a/Motion/Motion.vcxproj
+++ b/Motion/Motion.vcxproj
@@ -20,11 +20,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
+    <ClInclude Include="CustomButton.h" />
     <ClInclude Include="MainFrame.h" />
+    <ClInclude Include="Note.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="CustomButton.cpp" />
     <ClCompile Include="MainFrame.cpp" />
+    <ClCompile Include="Note.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
