--- a/Motion/Motion.vcxproj
+++ b/Motion/Motion.vcxproj
@@ -34,6 +34,7 @@
     <ProjectGuid>{262af553-f428-49b0-8fcf-193ebf24823d}</ProjectGuid>
     <RootNamespace>Motion</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Notelet</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
