--- a/Motion/Motion.vcxproj
+++ b/Motion/Motion.vcxproj
@@ -24,12 +24,14 @@
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="Note.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ToDoList.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="ImagePanel.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="Note.cpp" />
+    <ClCompile Include="ToDoList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Icon.ico" />
