--- a/Motion/Motion.vcxproj
+++ b/Motion/Motion.vcxproj
@@ -20,21 +20,30 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
-    <ClInclude Include="ImagePanel.h" />
+    <ClInclude Include="ColorDialog.h" />
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="Note.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="RGB2HSL.h" />
     <ClInclude Include="ToDoList.h" />
+    <ClInclude Include="Tool.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
-    <ClCompile Include="ImagePanel.cpp" />
+    <ClCompile Include="ColorDialog.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="Note.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="ToDoList.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Icon.ico" />
+    <Image Include="ElipseDarkMode.ico" />
+    <Image Include="ElipseWhiteMode.ico" />
+    <Image Include="NoteDarkMode.ico" />
+    <Image Include="NoteWhiteMode.ico" />
+    <Image Include="RectangleDarkMode.ico" />
+    <Image Include="RectangleWhiteMode.ico" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
