--- a/Motion/Motion.vcxproj.filters
+++ b/Motion/Motion.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Rectangle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cursors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainFrame.cpp">
@@ -82,5 +85,22 @@
     <Image Include="RectangleWhiteMode.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Calign.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Lalign.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Ralign.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClosedHand.cur">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="OpenHand.cur">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
