--- a/Motion/Motion.vcxproj.filters
+++ b/Motion/Motion.vcxproj.filters
@@ -148,5 +148,8 @@
     <Image Include="XSbrushWhiteMode.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Icon.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
